k8s/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartservice-ui
  namespace: smartservice
  labels:
    app: smartservice-ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8501
      targetPort: 8501
      protocol: TCP
  selector:
    app: smartservice-ui
